# SgCityBuilder

./: .gitmodules  CMakeLists.txt  README.md  premake5.lua
SgCityBuilder/: CMakeLists.txt
SgCityBuilder/res/config/: CityMap.map  Config.xml  Imgui.ini
SgCityBuilder/res/shader/buildings/: Fragment.frag  Vertex.vert
SgCityBuilder/res/shader/line/: Vertex.vert
SgCityBuilder/res/shader/map/: Fragment.frag  Vertex.vert
SgCityBuilder/res/shader/road_network/: Fragment.frag  Vertex.vert
SgCityBuilder/src/: Build.h  CityApplication.cpp  GameState.cpp  GameState.h
SgCityBuilder/src/automata/: AutoNode.cpp  AutoNode.h  AutoTrack.cpp  AutoTrack.h  Automata.cpp  Automata.h
SgCityBuilder/src/city/: City.cpp  City.h  Timer.h
SgCityBuilder/src/ecs/: Components.h  MoveSystem.h
SgCityBuilder/src/input/: MousePicker.cpp  MousePicker.h
SgCityBuilder/src/map/: Astar.cpp  Astar.h  BuildingGenerator.cpp  BuildingGenerator.h  Map.cpp  Map.h  RoadNetwork.cpp  RoadNetwork.h  Tile.cpp  Tile.h
SgCityBuilder/src/map/tile/: BuildingTile.cpp  BuildingTile.h  RoadTile.cpp  RoadTile.h  Tile.cpp  Tile.h
SgCityBuilder/src/renderer/: BuildingsRenderer.h  MapRenderer.h  RoadNetworkRenderer.h
SgCityBuilder/src/shader/: BuildingsShader.h  LineShader.h  MapShader.h  NodeShader.h  RoadNetworkShader.h
SgCityBuilder/src/util/: Debug.cpp  Debug.h  Line.cpp  Line.h
